2011-03-08  Dodji Seketeli  <dodji@redhat.com>

	PR c++/47705
	* pt.c (convert_nontype_argument): Only call decay_conversion on
	arrays.

2011-03-08  Dodji Seketeli  <dodji@redhat.com>

	* name-lookup.c (binding_to_template_parms_of_scope_p): Only
	consider scopes of primary template definitions.  Adjust comments.

2011-03-08  Jason Merrill  <jason@redhat.com>

	PR c++/47488
	* mangle.c (write_template_arg_literal) [STRING_CST]: Sorry.

2011-03-08  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/47278
	* decl.c (finish_function): Use decl_replaceable_p.

2011-03-01  Jason Merrill  <jason@redhat.com>

	PR c++/46159
	* parser.c (cp_parser_primary_expression): Don't warn about a
	failed tentative parse.

2011-02-26  Jason Merrill  <jason@redhat.com>

	PR c++/47904
	* tree.c (cp_tree_equal) [PARM_DECL]: Don't crash on
	DECL_ARTIFICIAL parms.

2010-12-16  Release Manager

	* GCC 4.5.2 released.

2010-12-07  Jakub Jelinek  <jakub@redhat.com>

	Backport from mainline
	2010-11-20  Jakub Jelinek  <jakub@redhat.com>
 
	PR c++/46538
	* decl.c (cp_make_fname_decl): Return error_mark_node if
	current_binding_level has already sk_function_parms kind.

2010-12-03  Jason Merrill  <jason@redhat.com>

	PR c++/46058
	* tree.c (lvalue_kind) [SCOPE_REF]: Handle non-dependent case.

2010-11-11  Jakub Jelinek  <jakub@redhat.com>

	Backport from mainline
	2010-11-09  Jakub Jelinek  <jakub@redhat.com>

	PR c++/45894
	* tree.c (lvalue_p_1): Don't crash if ref has NULL type.

	2010-11-05  Jakub Jelinek  <jakub@redhat.com>

	PR c++/46160
	* cp-gimplify.c (cp_gimplify_expr): Drop volatile INDIRECT_REFs
	on the RHS to avoid infinite recursion with gimplify_expr.

2010-10-15  Jason Merrill  <jason@redhat.com>

	PR c++/45983
	* tree.c (cp_build_qualified_type_real): Don't reuse a variant
	with a different typedef variant of the element type.

2010-09-06  Dodji Seketeli  <dodji@redhat.com>

    	PR c++/45200
    	PR c++/45293
    	PR c++/45558