@@ -1,3 +1,8 @@
+2011-03-08  Jason Merrill  <jason@redhat.com>
+
+	PR c++/47289
+	* pt.c (coerce_template_parms): Fix error recovery.
+
 2011-03-08  Dodji Seketeli  <dodji@redhat.com>
 
 	PR c++/47705
